collapse multi and single modes, simplify project structure convention
